# miou

./: .cirrus.yml  .git-blame-ignore-revs  .gitignore  .ocamlformat  404.html  B0.ml  CHANGES.md  CODE_OF_CONDUCT.md  LICENSE.md  README.md  _tags  conditions_and_mutexes.html  dune-project  dune-workspace  echo.html  highlight.js  index.html  interacting_system.html  introduction.html  manifesto.html  miou-record.opam  miou-with-picos.opam  miou.opam  miouu.opam  myocamlbuild.ml  print.html  retrospective.html  scheduler.html  searchindex.js  searchindex.json  sleepers.html  synchronous_server.html
.github/workflows/: test.yml
book/: book.toml
book/example/: a.out  t01.cmi  t01.cmx  t01.ml
book/src/: SUMMARY.md  asynchronicity.md  conditions_and_mutexes.md  draft.md  echo.md  interacting_system.md  introduction.md  manifesto.md  overview.md  retrospective.md  scheduler.md  sleepers.md  synchronous_server.md
book/theme/: highlight.min.js
echo/: main.ml
examples/digest/: README.md  dune  main.ml
examples/echo/: dune  main.ml
examples/echo_c/: main.ml
examples/echo_p/: main.ml
examples/echo_s/: dune  main.ml
examples/happy/: README.md  dune  happy.ml  happy.mli  main.ml  mdns.ml  mdns.mli  transport.ml  transport.mli
examples/philosophers/: README.md  main.ml
examples/server/: README.md  dune  server.ml
examples/sort/: dune  main.ml
happy/: README.md  dune  happy.c  happy.ml  happy.mli  main.ml  mdns.ml
http/: dune  flow.ml  http_miou_client.ml  http_miou_unix.ml  httpcats.ml  main.ml  runtime.ml  tls_miou.ml
lib/: .DESIGN.md.swp  .miou.ml.swp  .ocamlformat-ignore  bitv.c  dune  fmt.ml  fmt.mli  gen.mli  heapq.ml  heapq.mli  l.ml  l.mli  libmiou_poll.clib  logs.debug.ml  logs.ignore.ml  logs.ml  logs.mli  miou.ml  miou.mli  miou.mllib  miou_backoff.ml  miou_backoff.mli  miou_backoff.mllib  miou_bitv.ml  miou_bitv.mli  miou_gen.ml  miou_gen.mli  miou_logs.ml  miou_poll.c  miou_poll.ml  miou_poll.mli  miou_poll_config.mli  miou_pqueue.ml  miou_queue.ml  miou_queue.mli  miou_runtime_events.ml  miou_runtime_events.mli  miou_runtime_events.mllib  miou_sequence.ml  miou_sequence.mli  (+34 more)
lib/conf/: cc.ml  discover.ml  dune  generate.c  generate.objs  has_ppoll.c  has_ppoll.ml  select.ml  std.ml  std.mllib
lib/include/: discover.ml
merkle/: main_p.ml  main_s.ml
miou/: echo.html  index.html  merkle.html  scheduler.html  sleepers.html
miou/Miou/: index.html
miou/Miou/Domain/: index.html
miou/Miou/Domain/Uid/: index.html
miou/Miou/Domain_id/: index.html
miou/Miou/Id/: index.html
miou/Miou/Ownership/: index.html
miou/Miou/Promise/: index.html
miou/Miou/Promise/Uid/: index.html
miou/Miou/Queue/: index.html
miou/Miou/State/: index.html
miou/Miou/State/Op/: index.html
miou/Miou_unix/: index.html
miou/Miou_unix/Cond/: index.html
miouu/: index.html
miouu/Miouu/: index.html
miouu/Miouu/Cond/: index.html
philosophers/: main.ml
pkg/: META  pkg.ml
queue/: dune  main.ml
src/: base.ml  dune  intr.c  l.ml  l.mli  miou.ml  miou.mli  miou2.ml  miouu.ml  miouu.mli  ownership.ml  rlist.ml  rlist.mli  tq.ml  tq.mli  uid.ml  uid.mli
test/: dune  miouc.ml  test.ml  test_core.ml  test_fuchsia.ml  test_sync.ml  test_unix.ml
test/basics/: basics.t  dune  t01.ml  t02.ml  t03.ml
test/clock/: clock.linux.c  clock.linux.ml  clock.mach.c  clock.mach.ml  clock.windows.c  clock.windows.ml  dune  select.ml
test/core/: core.t  dune  t01.ml  t02.ml  t03.ml  t04.ml  t05.ml  t06.ml  t07.ml  t08.ml  t09.ml  t10.ml  t11.ml  t12.ml  t13.ml  t14.ml  t15.ml  t16.ml  t17.ml  t18.ml  t19.ml  t20.ml  t21.ml  t22.ml  t23.ml  t24.ml  t25.ml  t26.ml  t27.ml  t28.ml  t29.ml  t30.ml  t31.ml  t32.ml  t33.ml  tests.mld
test/philosophers/: dune  main.ml
test/queue/: dune  main.ml
test/simple/: dune  main.ml  simple.t  t01.ml  t02.ml  t03.ml  t04.ml  t05.ml  t06.ml  t07.ml  t08.ml  t09.ml  t10.ml  t11.ml  t12.ml  t13.ml  t14.ml  t15.ml  t16.ml  t17.ml  t18.ml
test/sync/: dune  test_sync.ml
test/unix/: dune  t01.ml  t02.ml  t03.ml  t04.ml  t05.ml  unix.t
test/with-picos/: bound_q.ml  bound_q.t  dune  test_structured.ml
top/: dune  fushia.ml  miou_top.ml  task.ml  tree.ml
trace/: dune  fuchsia.ml  fuchsia.mli  fushia.ml  fushia.mli  miou_record.ml  miou_trace.ml  miou_trace.mli
tutorials/echo/: dune  echo.mld  log.txt  main.ml
tutorials/merkle/: dune  main_p.ml  main_s.ml  merkle.mld
tutorials/queue/: cqueue.ml  dune
tutorials/sleepers/: dune  main.ml  sleepers.mld  sleepers.t  t01.ml  t02.ml  t03.ml
with-picos/: README.md  dune  miou_backoff.ml  miou_sync.ml  miou_sync.mli
