opam-version: "2.0"
name:         "miou"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://git.robur.coop/robur/miou"
bug-reports:  "https://git.robur.coop/robur/miou/issues"
dev-repo:     "git+https://github.com/robur-coop/miou.git"
doc:          "https://docs.osau.re/miou/"
license:      "MIT"
synopsis:     "Composable concurrency primitives for OCaml"

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"             {>= "5.0.0"}
  "dune"              {>= "2.8.0"}
  "dscheck"           {with-test & >= "0.4.0"}
  "digestif"          {with-test}
  "happy-eyeballs"    {with-test & >= "0.6.0"}
  "dns-client"        {with-test}
  "hxd"               {with-test}
  "mirage-crypto-rng" {with-test}
  "ipaddr"            {with-test}
  "logs"              {with-test & >= "0.7.0"}
  "dns"               {with-test}
  "dns-client"        {with-test}
]
