opam-version: "2.0"
name:         "miou"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/robur-coop/miou"
bug-reports:  "https://github.com/robur-coop/miou/issues"
dev-repo:     "git+https://github.com/robur-coop/miou.git"
doc:          "https://docs.osau.re/miou/"
license:      "MIT"
synopsis:     "Composable concurrency primitives for OCaml"

build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
  "ocaml"             {>= "5.0.0"}
  "dune"              {>= "2.8.0"}
  "dune-configurator"
  "dscheck"           {with-test & >= "0.4.0"}
  "digestif"          {with-test}
  "happy-eyeballs"    {with-test & >= "0.6.0"}
  "dns-client"        {with-test}
  "hxd"               {with-test}
  "mirage-crypto-rng" {with-test}
  "ipaddr"            {with-test}
  "logs"              {with-test & >= "0.7.0"}
  "dns"               {with-test}
  "dns-client"        {with-test}
  "mtime"             {with-test & >= "2.0.0"}
  "ocamlformat"       {with-dev-setup & = "0.27.0"}
]
x-maintenance-intent: [ "(latest)" ]
