(library
 (name httpcats)
 (modules httpcats tls_miou http_miou_unix http_miou_client flow runtime)
 (libraries hxd.string hxd.core ca-certs happy httpaf h2 tls miou.unix))

(executable
 (name main)
 (modules main)
 (libraries
  logs.threaded
  logs.fmt
  fmt.tty
  mirage-crypto-rng.unix
  hxd.string
  hxd.core
  mdns
  httpcats))
