(library
 (name backoff)
 (public_name miou.backoff)
 (wrapped false)
 (modules miou_backoff))

(library
 (name sync)
 (public_name miou.sync)
 (wrapped false)
 (modules miou_sync)
 (libraries miou.backoff))

(library
 (name miou)
 (public_name miou)
 (wrapped false)
 (modules
  miou_fmt
  miou
  miou_gen
  miou_logs
  miou_vector
  miou_pqueue
  miou_sequence
  miou_queue
  miou_state)
 (instrumentation
  (backend bisect_ppx))
 (libraries miou.backoff miou.sync))

(library
 (name miou_unix)
 (public_name miou.unix)
 (wrapped false)
 (foreign_stubs
  (language c)
  (flags :standard
         "-Wall"
         "-Wshadow"
         "-Wpointer-arith"
         "-Wcast-qual"
         "-Wsign-compare"
         "-Werror")
  (names bitv miou_poll))
 (modules miou_unix miou_bitv miou_poll_config miou_poll)
 (libraries unix miou))

(rule
 (targets miou_poll_config.ml miou_poll.h)
 (action (run ./include/discover.exe)))

(documentation
 (package miou)
 (mld_files scheduler))
