(library
 (name backoff)
 (public_name miou.backoff)
 (wrapped false)
 (modules miou_backoff))

(library
 (name sync)
 (public_name miou.sync)
 (wrapped false)
 (modules miou_sync)
 (libraries miou.backoff))

(library
 (name miou_runtime_events)
 (public_name miou.runtime_events)
 (modules miou_runtime_events)
 (libraries runtime_events))

(library
 (name miou)
 (public_name miou)
 (wrapped false)
 (modules
  miou_fmt
  miou
  miou_gen
  miou_logs
  miou_vector
  miou_pqueue
  miou_sequence
  miou_queue
  miou_state)
 (instrumentation
  (backend bisect_ppx))
 (libraries miou.backoff miou.sync miou.runtime_events))

(library
 (name miou_unix)
 (public_name miou.unix)
 (wrapped false)
 (modules miou_unix)
 (libraries unix miou))

(documentation
 (package miou)
 (mld_files scheduler))
