(library
 (name backoff)
 (public_name miou.backoff)
 (wrapped false)
 (modules miou_backoff))

(library
 (name sync)
 (public_name miou.sync)
 (wrapped false)
 (modules miou_sync)
 (libraries miou.backoff))

(library
 (name bitv)
 (public_name miou.bitv)
 (wrapped false)
 (modules miou_bitv)
 (foreign_stubs
  (language c)
  (flags
   :standard
   "-Wall"
   "-Wshadow"
   "-Wpointer-arith"
   "-Wcast-qual"
   "-Wsign-compare")
  (names bitv)))

(library
 (name miou)
 (public_name miou)
 (wrapped false)
 (modules
  miou_fmt
  miou
  miou_gen
  miou_logs
  miou_vector
  miou_pqueue
  miou_sequence
  miou_queue
  miou_state)
 (instrumentation
  (backend bisect_ppx))
 (libraries miou.backoff miou.sync))

(library
 (name miou_unix)
 (public_name miou.unix)
 (wrapped false)
 (foreign_stubs
  (language c)
  (flags
   :standard
   "-Wall"
   "-Wshadow"
   "-Wpointer-arith"
   "-Wcast-qual"
   "-Wsign-compare")
  (names miou_unix))
 (modules (:include conf/modules.sexp))
 (libraries unix miou miou.bitv))

(rule
  (targets miou_unix.ml)
  (deps miou_unix.poll.ml miou_unix.select.ml)
  (action (copy miou_unix.%{read-strings:conf/impl.out}.ml %{targets})))

(rule
 (targets miou_poll_config.ml miou_ppoll.h)
 (deps conf/discover.exe conf/has_ppoll.c)
 (action
  (run ./conf/discover.exe)))

(documentation
 (package miou)
 (mld_files scheduler))
