(library
 (name test)
 (modules test)
 (libraries fmt miou unix))

(executable
 (name test_core)
 (modules test_core)
 (libraries test unix miou))

(executable
 (name test_unix)
 (modules test_unix)
 (libraries test unix miou miou.unix))

(rule
 (alias runtest)
 (action
  (setenv
   MIOU_DOMAINS
   3
   (progn
    (run ./test_core.exe)
    (run ./test_unix.exe)
    ))))
