(library
 (name test)
 (modules test)
 (libraries fmt miou unix))

(executable
 (name test_core)
 (modules test_core)
 (libraries test unix miou miou.unix))

(executable
 (name test_unix)
 (modules test_unix)
 (libraries test unix miou miou.unix))

(rule
 (alias runtest)
 (action
  (setenv
   MIOU_DOMAINS
   3
   (run ./test_core.exe))))

(rule
 (alias runtest)
 (enabled_if
  (<> %{os_type} "Win32"))
 (action
  (setenv
   MIOU_DOMAINS
   3
   (run ./test_unix.exe))))
