(executable
 (name discover)
 (modules discover)
 (libraries dune-configurator))

(executable
 (name select)
 (modules select)
 (libraries dune-configurator))

(library
 (name std)
 (modules std))

; for ocamlbuild

(executable
 (name cc)
 (modules cc)
 (libraries std))

; for ocamlbuild

(executable
 (name has_ppoll)
 (modules has_ppoll)
 (libraries std))

(rule
 (targets modules.sexp impl.out miou_poll.h)
 (deps select.exe)
 (action
  (run ./select.exe)))
