(rule
 (targets clock.ml clock_stubs.c clock.sexp)
 (deps
  (:select select.ml)
  clock.linux.c
  clock.linux.ml
  clock.mach.c
  clock.mach.ml
  clock.windows.c
  clock.windows.ml)
 (action
  (run %{ocaml} %{select} --system %{ocaml-config:system} -o clock)))

(library
 (name clock)
 (modules clock)
 (foreign_stubs
  (language c)
  (names clock_stubs)
  (flags
   (:standard)
   (:include clock.sexp))))
