(executable
 (name t01)
 (modules t01)
 (libraries miou))

(executable
 (name t02)
 (modules t02)
 (libraries miou))

(executable
 (name t03)
 (modules t03)
 (libraries miou))

(executable
 (name t04)
 (modules t04)
 (libraries miouc))

(executable
 (name t05)
 (modules t05)
 (libraries miouc))

(executable
 (name t06)
 (modules t06)
 (libraries miouc))

(executable
 (name t07)
 (modules t07)
 (libraries miou))

(executable
 (name t08)
 (modules t08)
 (libraries miou))

(executable
 (name t09)
 (modules t09)
 (libraries miouc))

(executable
 (name t10)
 (modules t10)
 (libraries miou))

(executable
 (name t11)
 (modules t11)
 (libraries miouc))

(executable
 (name t12)
 (modules t12)
 (libraries miou))

(executable
 (name t13)
 (modules t13)
 (libraries miou))

(executable
 (name t14)
 (modules t14)
 (libraries miouc miou.unix))

(executable
 (name t15)
 (modules t15)
 (libraries miouc))

(executable
 (name t16)
 (modules t16)
 (libraries unix miou))

(executable
 (name t17)
 (modules t17)
 (libraries miou))

(executable
 (name t18)
 (modules t18)
 (libraries miou))

(executable
 (name t19)
 (modules t19)
 (libraries miou))

(executable
 (name t20)
 (modules t20)
 (libraries miou))

(executable
 (name t21)
 (modules t21)
 (libraries miou))

(executable
 (name t22)
 (modules t22)
 (libraries miou))

(executable
 (name t23)
 (modules t23)
 (libraries miouc))

(executable
 (name t24)
 (modules t24)
 (libraries miou))

(executable
 (name t25)
 (modules t25)
 (libraries miou))

(executable
 (name t26)
 (modules t26)
 (libraries miou))

(executable
 (name t27)
 (modules t27)
 (libraries miou))

(executable
 (name t28)
 (modules t28)
 (libraries miou))

(executable
 (name t29)
 (modules t29)
 (libraries miou))

(executable
 (name t30)
 (modules t30)
 (libraries miou))

(executable
 (name t31)
 (modules t31)
 (libraries miou))

(executable
 (name t32)
 (modules t32)
 (libraries miou))

(executable
 (name t33)
 (modules t33)
 (libraries miou))

(cram
 (package miou)
 (deps
  t01.exe
  t02.exe
  t03.exe
  t04.exe
  t05.exe
  t06.exe
  t07.exe
  t08.exe
  t09.exe
  t10.exe
  t11.exe
  t12.exe
  t13.exe
  t14.exe
  t15.exe
  t16.exe
  t17.exe
  t18.exe
  t19.exe
  t20.exe
  t21.exe
  t22.exe
  t23.exe
  t24.exe
  t25.exe
  t26.exe
  t27.exe
  t28.exe
  t29.exe
  t30.exe
  t31.exe
  t32.exe
  t33.exe))
