(executable
 (name t01)
 (modules t01)
 (libraries miou))

(executable
 (name t02)
 (modules t02)
 (libraries miou))

(executable
 (name t03)
 (modules t03)
 (libraries miou))

(executable
 (name t04)
 (modules t04)
 (libraries miou))

(executable
 (name t05)
 (modules t05)
 (libraries unix miou))

(cram
 (package miou)
 (deps t01.exe t02.exe t03.exe t04.exe t05.exe))
