(executable
 (name t01)
 (modules t01)
 (libraries miou))

(executable
 (name t02)
 (modules t02)
 (libraries miou))

(executable
 (name t03)
 (modules t03)
 (libraries miou))

(executable
 (name t04)
 (modules t04)
 (libraries miou))

(executable
 (name t05)
 (modules t05)
 (libraries unix miou))

(executable
 (name t06)
 (modules t06)
 (libraries unix miou))

(executable
 (name t07)
 (modules t07)
 (libraries miou))

(executable
 (name t08)
 (modules t08)
 (libraries unix miou))

(executable
 (name t09)
 (modules t09)
 (libraries unix miou))

(executable
 (name t10)
 (modules t10)
 (libraries miou))

(cram
 (package miou)
 (deps
  t01.exe
  t02.exe
  t03.exe
  t04.exe
  t05.exe
  t06.exe
  t07.exe
  t08.exe
  t09.exe
  t10.exe))
